# note-gen

./: .env.example  .gitignore  pyproject.toml  run.sh
.claude/: settings.local.json
app/: config.py  database.py  main.py  models.py
app/clients/: __init__.py  groq_client.py
app/recording/: __init__.py  audio_utils.py  worker.py
app/routes/: notes.py  recording.py  sessions.py  slides.py  study.py
app/services/: notes.py  slides.py  storage.py  study.py  transcription.py
context/: project-description.md
frontend/: app.js  index.html  styles.css
